--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,14 @@
         <div class="game-wrapper">
             <div class="controls">
                 <div class="score-display">
-                    Score: <span id="scoreValue">0</span>
+                    <div class="score-item">
+                        Score:
+                        <span id="scoreValue" class="score-value">0</span>
+                    </div>
+                    <div class="score-item">
+                        Best:
+                        <span id="highestScore" class="best-score">0</span>
+                    </div>
                 </div>
                 <button id="themeToggleBtn" class="theme-toggle-button">
                     🌙
@@ -23,7 +30,6 @@
             </div>
             <canvas width="512" height="512" id="gameCanvas"></canvas>
         </div>
-
         <script src="main.js"></script>
     </body>
 </html>
