Added Logo to app

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                         <span id="highestScore" class="best-score">0</span>
                     </div>
                 </div>
+                <img id="logo" src="assets/snake.png" />
                 <button id="themeToggleBtn" class="theme-toggle-button">
                     🌙
                 </button>
